# iBMSCAgent

./: .gitignore  CMakeLists.txt  README.md  Untitled.autosave.bms  qml.qrc  test_hittest.cpp
openspec/changes/ableton-ui-redesign/: README.md  design.md  proposal.md  tasks.md
openspec/changes/ableton-ui-redesign/specs/ableton-control-bar/: spec.md
openspec/changes/ableton-ui-redesign/specs/ableton-sidebar/: spec.md
openspec/changes/ableton-ui-redesign/specs/ableton-theme/: spec.md
openspec/changes/complete-editor-features/: design.md  proposal.md  tasks.md
openspec/changes/complete-editor-features/specs/audio-waveform/: spec.md
openspec/changes/complete-editor-features/specs/clipboard-operations/: spec.md
openspec/changes/complete-editor-features/specs/dynamic-bgm-lanes/: spec.md
openspec/changes/complete-editor-features/specs/long-notes/: spec.md
openspec/changes/complete-editor-features/specs/note-editing/: spec.md
openspec/changes/complete-editor-features/specs/time-selection-ops/: spec.md
openspec/changes/complete-editor-features/specs/tool-modes/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/: design.md  proposal.md  tasks.md
openspec/changes/full-vb-parity-and-bugfixes/specs/advanced-find-replace/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/editor-modes/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/fix-dialog-and-trackpad/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/note-conversions/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/note-interactions/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/options-panel-complete/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/splash-screen/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/statistics-dialog/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/theme-system/: spec.md
openspec/changes/full-vb-parity-and-bugfixes/specs/time-selection-tools/: spec.md
openspec/changes/port-vb-features-and-ui-polish/: design.md  proposal.md  tasks.md
openspec/changes/rewrite-ibmsc/: design.md  proposal.md  tasks.md
openspec/changes/rewrite-ibmsc/specs/audio-engine/: spec.md
qml/: Main.qml  SplashOverlay.qml  WelcomeScreen.qml
qml/canvas/: ChartCanvasItem.cpp  ChartCanvasItem.cpp.patch  ChartCanvasItem.h  ChartCanvasItem.h.patch
qml/components/: BpmOverlay.qml  CanvasHeader.qml  CollapsiblePanel.qml  ControlBar.qml  FlatComboBox.qml  OverflowMenu.qml  SidebarSection.qml  Theme.qml
qml/panels/: BmpResourcePanel.qml  BpmToolsDialog.qml  ColumnConfigDialog.qml  EditValueDialog.qml  FindReplaceDialog.qml  HeaderPanel.qml  JumpToMeasureDialog.qml  MeasureLengthPanel.qml  SelectedNotePanel.qml  SettingsDialog.qml  StatisticsDialog.qml  WavResourcePanel.qml  WaveformInspector.qml
qt-rewrite/: CMakeLists.txt  README.md
qt-rewrite/docs/: BEHAVIOR_BLACKBOX_LEDGER.md  FEATURE_GAP_MATRIX.md  IO_ROUNDTRIP_LEDGER.md  PARITY_CHECKLIST.md  VB_FILE_PARITY_LEDGER.md
qt-rewrite/resources/: ibmsc.qrc
qt-rewrite/src/: main.cpp
qt-rewrite/src/audio/: audio_preview_service.cpp  audio_preview_service.h
qt-rewrite/src/core/: bms_document.cpp  bms_document.h
qt-rewrite/src/core/settings/: persistent_profile.cpp  persistent_profile.h
qt-rewrite/src/core/undo/: commands.cpp  commands.h  i_undo_command.h
qt-rewrite/src/io/: bms_parser.cpp  bms_parser.h
qt-rewrite/src/theme/: theme_loader.cpp  theme_loader.h
qt-rewrite/src/ui/: chart_editor_widget.cpp  chart_editor_widget.h  main_window.cpp  main_window.h  po_panel_manager.cpp  po_panel_manager.h  resource_catalog.cpp  resource_catalog.h
qt-rewrite/src/ui/dialogs/: about_dialog.cpp  about_dialog.h  color_picker_dialog.cpp  color_picker_dialog.h  compare_method_dialog.cpp  compare_method_dialog.h  diag_find_dialog.cpp  diag_find_dialog.h  import_sm_dialog.cpp  import_sm_dialog.h  load_progress_dialog.cpp  load_progress_dialog.h  myo2_dialog.cpp  myo2_dialog.h  op_general_dialog.cpp  op_general_dialog.h  op_player_dialog.cpp  op_player_dialog.h  op_visual_dialog.cpp  op_visual_dialog.h  splash_dialog.cpp  splash_dialog.h  statistics_dialog.cpp  statistics_dialog.h
qt-rewrite/tests/parity/: README.md
src/app/: AppController.cpp  AppController.h  AppSettings.cpp  AppSettings.h  MeasureLengthModel.cpp  MeasureLengthModel.h  ResourceTableModel.cpp  ResourceTableModel.h  ThemeManager.cpp  ThemeManager.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/editor/: EditorDocument.cpp  EditorDocument.h  EditorUtil.h
src/editor/commands/: BpmToolsCommands.cpp  BpmToolsCommands.h  ConvertHiddenCommand.cpp  ConvertHiddenCommand.h  ConvertLongShortCommand.cpp  ConvertLongShortCommand.h  CopyMeasureCommand.cpp  CopyMeasureCommand.h  DeleteMeasureCommand.cpp  DeleteMeasureCommand.h  DeleteNotesCommand.cpp  DeleteNotesCommand.h  EditHeaderCommand.cpp  EditHeaderCommand.h  EditResourceCommand.cpp  EditResourceCommand.h  EditTimingCommand.cpp  EditTimingCommand.h  MirrorNotesCommand.cpp  MirrorNotesCommand.h  ModifyLabelsCommand.cpp  ModifyLabelsCommand.h  MoveNoteCommand.cpp  MoveNoteCommand.h  MoveNotesCommand.cpp  MoveNotesCommand.h  PasteMeasureCommand.cpp  PasteMeasureCommand.h  PlaceNoteCommand.cpp  PlaceNoteCommand.h  RemoveNoteCommand.cpp  RemoveNoteCommand.h  SetMeasureLengthCommand.cpp  SetMeasureLengthCommand.h  StormCommand.cpp  StormCommand.h  TimeSelectionCommand.cpp  TimeSelectionCommand.h  TimeSelectionTools.cpp  TimeSelectionTools.h
src/io/: BmsParser.cpp  BmsParser.h  BmsSerializer.cpp  BmsSerializer.h  EncodingDetector.cpp  EncodingDetector.h
src/model/: Base36.cpp  Base36.h  BmsDocument.cpp  BmsDocument.h  ChannelType.cpp  ChannelType.h  ColumnConfig.h  Note.cpp  Note.h  TimingMap.cpp  TimingMap.h
src/player/: PlayerAudio.cpp  PlayerAudio.h  PlayerBridge.cpp  PlayerBridge.h  PlayerChart.cpp  PlayerChart.h  PlayerRenderer.cpp  PlayerRenderer.h  PlayerWindow.cpp  PlayerWindow.h
tests/: test_base36.cpp  test_bms_parser.cpp  test_channel_type.cpp  test_editor_document.cpp  test_main.cpp  test_timing_map.cpp
(+15 files in other folders)
